Fix distortion on iOS Safari

--- a/src/services/preact-canvas/components/board/style.css
+++ b/src/services/preact-canvas/components/board/style.css
@@ -49,7 +49,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   pointer-events: none;
 }
